# RAGpdf

./: .gitignore  app.py  data_loader.py  main.py  pyproject.toml  requirements.txt  vector_db.py
qdrant_storage/: raft_state.json
qdrant_storage/collections/docs/0/: newest_clocks.json
qdrant_storage/collections/rag_pdf/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/rag_pdf/0/segments/28347913-60ad-4c4b-8294-c18d498af6a6/: mutable_id_tracker.mappings
qdrant_storage/collections/rag_pdf/0/segments/4bfaab80-a771-4737-8475-b6e9042e0245/: mutable_id_tracker.mappings
