[project]
name = "ragpdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.3",
    "google-generativeai>=0.8.5",
    "inngest>=0.5.12",
    "llama-index-core>=0.14.8",
    "llama-index-readers-file>=0.5.4",
    "openai>=2.8.1",
    "pypdf>=6.3.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.0",
    "uvicorn[standard]>=0.38.0",
]
